Add OTA update support

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.0.4
 	x385832/Elog@^2.0.10
+	hard-stuff/OTA-Hub-device_client@^0.0.5
 check_tool = clangtidy
 check_flags = 
 	clangtidy: --checks=-*,bugprone-*,cert-*,clang-analyzer-*,cppcoreguidelines-*,-cppcoreguidelines-pro-bounds-constant-array-index,modernize-*,hicpp-*,darwin-*,performance-*,readability-*; --fix --fix-errors
